rpmdevtools x.xx (201x-xx-xx)

  Ville Skyttä:
  - Python 3.6 invalid escape sequence deprecation fixes

rpmdevtools 8.10 (2017-01-14)

  Ville Skyttä:
  - Extract (only) full name from gecos field in -packager (#1350928)
  - Point URLs to pagure.io

rpmdevtools 8.9 (2016-06-25)

  Ville Skyttä:
  - Fix bumpspec regression introduced in 8.7

rpmdevtools 8.8 (2016-06-25)

  Ville Skyttä:
  - Fix build if no previous version of rpmdev-packager is installed

  Petr Písař:
  - Update perl spec template build dependencies (#1349884)

rpmdevtools 8.7 (2016-06-23)

  Ville Skyttä:
  - Use %make_build for rpm >= 4.12 in -newspec
  - Add placeholders args for %doc in spec templates (#1256815)
  - Add %license to spec templates (#1256815)
  - Use %autosetup for rpm >= 4.11 in -newspec (#1290913)
  - Don't use shell to invoke -packager in -bumpspec
  - Fix -checksig with Python 3; Python >= 2.7 is now required (#1348737)

  Ralph Bean:
  - Don't write changelog in -bumpspec if nothing changed

  Michael Schwendt:
  - Make -bumpspec preserve whitespace in release lines

  Jason Tibbitts:
  - Add -f/--file option to -bumpspec (#1246273)

  Carl George:
  - Try git config for -packager info (#1311255)

rpmdevtools 8.6 (2015-05-10)

  Ville Skyttä:
  - Update bash completion setup for modern bash-completion
  - Fall back to username in -packager (#29)
  - Do not define %_smp_mflags in -setuptree (#1198009)
  - Print usage only once in -vercmp hyphen warning
  - Always check hyphens in -vercmp no matter where EVR comes from
  - Python spec template improvements
  - Avoid spectool warnings on invalid input (#1219917)
  - Drop %defattr from spec templates (#30)

  Slavek Kabrda:
  - Python spec template improvements (#28)

rpmdevtools 8.5 (2014-10-20)

  Ville Skyttä:
  - Install default curlrc, add --insecure to it.
  - Support case insensitive Release tag in -bumpspec fallback.
  - Add LZ4, zlib, and qpress support to -extract.