@@ -26,7 +26,7 @@ use File::Spec;
 use FileHandle;
 use Getopt::Long;
 
-my $VERSION = '1.0.10rpmdev2';
+my $VERSION = '1.0.10rpmdev3';
 my $CURLRC = '__SYSCONFDIR__/rpmdevtools/curlrc';
 
 Getopt::Long::Configure ('no_ignore_case');
@@ -42,9 +42,6 @@ my %rpm_sections;
 foreach (@rpm_sections) {
 	$rpm_sections{$_} = 1;
 }
-
-my @protocols = qw/ftp http https/;
-my $protocols_re = '(?:' . join ('|', @protocols) . ')';
 
 my @defines;
 my %sources;
@@ -194,8 +191,8 @@ sub list_sources_patches {
 }
 
 sub retrievable {
-	my $url = $_[0];
-	return eval "\$url =~ m,^$protocols_re://,i;";
+	# https://www.iana.org/assignments/uri-schemes/uri-schemes.xhtml
+	return $_[0] =~ m,^[\w.+-]+://.+,;
 }
 
 sub retrieve {
