@@ -2,6 +2,7 @@ rpmdevtools x.xx (201x-xx-xx)
 
   Ville Skyttä:
   - Python 3.6 invalid escape sequence deprecation fixes
+  - Remove internal protocol retrievability check in spectool (#1472006)
 
 rpmdevtools 8.10 (2017-01-14)
 
